--- a/web/style.css
+++ b/web/style.css
@@ -1,28 +1,14 @@
-html, body{
+html,
+body {
     height: 100%;
-    margin-top: -30px;
+    overscroll-behavior-y: contain;
 }
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+
+.mw-700 {
     max-width: 700px;
-    height: 100%;
-    display: block;
 }
-.mouse-move {
-    width: 100%;    
-    background-color: rgb(235, 235, 235);
-    height: 100%;
-    margin-top: 0px;
-}
-.mouse-click {
-    width: 100%;    
-    background-color: rgb(130, 209, 255);
-    height: 30px;
-}
-.keyboard {
-    width: 100%;    
-    background-color: rgb(130, 255, 147);
-    height: 30px;
+
+.center {
+    margin-right: auto;
+    margin-left: auto;
 }
